# Stock-Trading-Trade

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  compose.yaml  setup_api.sh
docs/: TODO.md  architecture.md  checklist.md  services_design.md  tcp_design.md  thread_design.md
src/: CMakeLists.txt  main.cpp
src/core/: status.h
src/core/config/: config.cpp  config.h  config.hpp
src/core/utils/: common.hpp
src/core/utils/threading/: task_pool.cpp  task_pool.h  task_pool.hpp
src/core/utils/time/: time.cpp  time.hpp
src/execution/: engine.cpp  engine.hpp
src/execution/consumer/: consumer.cpp  consumer.hpp
src/execution/contracts/: trade_contract.cpp  trade_contract.h
src/execution/orders/: trading_order.cpp  trading_order.h
src/execution/producer/: producer.cpp  producer.hpp
src/network/ib_api/: ib_connection.cpp  ib_orders.cpp  ib_wrapper.cpp  ib_wrapper.h
src/networking/alpaca/models/: account_model.h  account_model.hpp  asset.h  asset_model.h  asset_model.hpp  order_model.h  order_model.hpp  position_model.h  position_model.hpp
src/networking/alpaca/services/account/: account_service.cpp  account_service.h  account_service.hpp
src/networking/alpaca/services/asset/: asset_service.cpp  asset_service.h  asset_service.hpp
src/networking/alpaca/services/order/: order_service.cpp  order_service.h  order_service.hpp
src/networking/alpaca/services/position/: position_service.cpp  position_service.h  position_service.hpp
src/networking/ib_api/: ib_errors.cpp  ib_market_data.cpp  ib_wrapper.cpp  ib_wrapper.h
src/networking/tcp/client/: tcp_client.cpp  tcp_client.h  tcp_client.hpp
src/networking/tcp/common/: protocol.cpp  protocol.h  protocol.hpp
src/networking/tcp/server/: tcp_server.hpp
